--- a/01_agama/madhyama/MA_001.md
+++ b/01_agama/madhyama/MA_001.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 1: The Sevens | 1. Skillful Qualities'
 type: kramdown
-base: ../../../
+base: ../../
 previous: index.html
 next: MA_002.html
 ---
