--- a/01_agama/madhyama/MA_005.md
+++ b/01_agama/madhyama/MA_005.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 1: The Sevens | 5. The Wood Pile Parable'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_004.html
 next: MA_006.html
 ---
