--- a/01_agama/madhyama/MA_006.md
+++ b/01_agama/madhyama/MA_006.md
@@ -2,7 +2,7 @@
 layout: default
 title: "The Medium Discourses | Chapter 1: The Sevens | 6. The Good Person’s Departure"
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_005.html
 next: MA_007.html
 ---
