--- a/01_agama/madhyama/MA_012.md
+++ b/01_agama/madhyama/MA_012.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 2: Related to Deeds | 12. Vāṣpa'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_011.html
 next: MA_013.html
 ---
