--- a/01_agama/madhyama/MA_016.md
+++ b/01_agama/madhyama/MA_016.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 2: Related to Deeds | 16. The Kālāmas'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_015.html
 next: MA_017.html
 ---
