--- a/01_agama/madhyama/MA_017.md
+++ b/01_agama/madhyama/MA_017.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 2: Related to Deeds | 17. Gāminī'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_016.html
 next: MA_025.html
 ---
