--- a/01_agama/madhyama/MA_025.md
+++ b/01_agama/madhyama/MA_025.md
@@ -2,6 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 3: Related to Śāriputra | 25. The Water Parable (2)'
 type: kramdown
+base: ../../
 previous: MA_017.html
 next: MA_029.html
 next: 
@@ -63,13 +64,13 @@ next:
   </tr>
   <tr>
     <td title='t26.1.454c11'>「如是，諸賢，或有一人身淨行⋯口⋯意淨行。 常當念彼身之淨行⋯口⋯意淨行。 若慧者見，設生恚惱，應如是除。 諸賢，我向所說五除惱法者，因此故說。」</td>
-    <td id='p13'>13. “In this way, Venerables, there might be someone whose physical, verbal, and mental conduct is pure. You should always be mindful of their pure physical, verbal, and mental conduct. If a wise person is angered by what they see, they should eliminate that anger in this way. Venerables, I said I would discuss five ways to eliminate irritation, and so I have done that.”<sup id="ref6"><a href="#n6">6</a></td>
-  </tr>
+    <td id='p13'>13. “In this way, Venerables, there might be someone whose physical, verbal, and mental conduct is pure. You should always be mindful of their pure physical, verbal, and mental conduct. If a wise person is angered by what they see, they should eliminate that anger in this way. Venerables, I said I would discuss five ways to eliminate irritation, and so I have done that.”<sup id="ref6"><a href="#n6">6</a></sup></td>
+    </tr>
   <tr>
     <td title='t26.1.454c14'>尊者舍梨子所說如是。 諸比丘聞已，歡喜，奉行。</td>
     <td id='p14'>14. This is what Venerable Śāriputra said. The monks who heard it rejoiced and approved.</td>
   </tr>
-</table>
+</table> 
 
 <hr/>
 
