--- a/01_agama/madhyama/MA_031.md
+++ b/01_agama/madhyama/MA_031.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 3: Related to Śāriputra | 31. Discernment of the Noble Truths'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_029.html
 next: MA_041.html
 ---
