--- a/01_agama/madhyama/MA_043.md
+++ b/01_agama/madhyama/MA_043.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 5: Related to Cultivation | 43. Don’t Think'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_042.html
 next: MA_044.html
 ---
