--- a/01_agama/madhyama/MA_045.md
+++ b/01_agama/madhyama/MA_045.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 5: Related to Cultivation | 45. Conscience and Modesty'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_044.html
 next: MA_046.html
 ---
