--- a/01_agama/madhyama/MA_046.md
+++ b/01_agama/madhyama/MA_046.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 5: Related to Cultivation | 46. Conscience and Modesty (2)'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_045.html
 next: MA_047.html
 ---
