--- a/01_agama/madhyama/MA_048.md
+++ b/01_agama/madhyama/MA_048.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 5: Related to Cultivation | 48. Precepts (2)'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_047.html
 next: MA_049.html
 ---
