--- a/01_agama/madhyama/MA_049.md
+++ b/01_agama/madhyama/MA_049.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 5: Related to Cultivation | 49. Veneration'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_048.html
 next: MA_050.html
 ---
