--- a/01_agama/madhyama/MA_051.md
+++ b/01_agama/madhyama/MA_051.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 5: Related to Cultivation | 51. The Origin'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_050.html
 next: MA_055.html
 ---
