--- a/01_agama/madhyama/MA_057.md
+++ b/01_agama/madhyama/MA_057.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 5: Related to Cultivation | 57. A Teaching for the Monks'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_056.html
 next: MA_058.html
 ---
