--- a/01_agama/madhyama/MA_058.md
+++ b/01_agama/madhyama/MA_058.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 6: Related to Kings | 58. The Seven Treasures'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_057.html
 next: MA_072.html
 ---
