--- a/01_agama/madhyama/MA_072.md
+++ b/01_agama/madhyama/MA_072.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 7: King Dīrghāyu | 72. The Legend of King Dīrghāyu'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_058.html
 next: MA_073.html
 ---
