--- a/01_agama/madhyama/MA_073.md
+++ b/01_agama/madhyama/MA_073.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 7: King Dīrghāyu | 73. The Gods'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_072.html
 next: MA_074.html
 ---
