--- a/01_agama/madhyama/MA_075.md
+++ b/01_agama/madhyama/MA_075.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 7: King Dīrghāyu | 75. The Pure Way to the Imperturbable'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_074.html
 next: MA_076.html
 ---
