--- a/01_agama/madhyama/MA_076.md
+++ b/01_agama/madhyama/MA_076.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 7: King Dīrghāyu | 76. [Ugracelā]'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_075.html
 next: MA_077.html
 ---
