--- a/01_agama/madhyama/MA_078.md
+++ b/01_agama/madhyama/MA_078.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 7: King Dīrghāyu | 78. Brahmā’s Invitation to the Buddha'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_077.html
 next: MA_079.html
 ---
