--- a/01_agama/madhyama/MA_079.md
+++ b/01_agama/madhyama/MA_079.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 7: King Dīrghāyu | 79. The Greater Gods'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_078.html
 next: MA_080.html
 ---
