--- a/01_agama/madhyama/MA_080.md
+++ b/01_agama/madhyama/MA_080.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 7: King Dīrghāyu | 80. The Rough Cloth'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_079.html
 next: MA_081.html
 ---
