--- a/01_agama/madhyama/MA_083.md
+++ b/01_agama/madhyama/MA_083.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 7: King Dīrghāyu | 83. A Senior Elder’s Drowsiness'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_082.html
 next: MA_084.html
 ---
