--- a/01_agama/madhyama/MA_084.md
+++ b/01_agama/madhyama/MA_084.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 7: King Dīrghāyu | 84. Thornless'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_083.html
 next: MA_085.html
 ---
