--- a/01_agama/madhyama/MA_085.md
+++ b/01_agama/madhyama/MA_085.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 7: King Dīrghāyu | 85. The Genuine Person'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_084.html
 next: MA_092.html
 ---
