--- a/01_agama/madhyama/MA_092.md
+++ b/01_agama/madhyama/MA_092.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 8: Defilement | 92. The Analogy of the Blue and White Lotus Flowers'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_085.html
 next: MA_095.html
 ---
