--- a/01_agama/madhyama/MA_098.md
+++ b/01_agama/madhyama/MA_098.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 9: Causation | 98. The Abodes of Mindfulness'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_096.html
 next: MA_101.html
 ---
