--- a/01_agama/madhyama/MA_137.md
+++ b/01_agama/madhyama/MA_137.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 11: The Greats | 137. The World'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_127.html
 next: MA_139.html
 ---
