--- a/01_agama/madhyama/MA_139.md
+++ b/01_agama/madhyama/MA_139.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 11: The Greats | 139. The Path of Calming'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_137.html
 next: MA_140.html
 ---
