--- a/01_agama/madhyama/MA_159.md
+++ b/01_agama/madhyama/MA_159.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 12: The Brahmins | 159. Agrahana'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_153.html
 next: MA_176.html
 ---
