--- a/01_agama/madhyama/MA_186.md
+++ b/01_agama/madhyama/MA_186.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 15: Pairs | 186. Inquiry'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_176.html
 next: MA_200.html
 ---
