--- a/01_agama/madhyama/MA_204.md
+++ b/01_agama/madhyama/MA_204.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 17: Potaliya | 204. Raṃbhaka'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_200.html
 next: MA_210.html
 ---
