--- a/01_agama/madhyama/MA_002.md
+++ b/01_agama/madhyama/MA_002.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 1: The Sevens | 2. The Pārijāta Tree'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_001.html
 next: MA_003.html
 ---
