--- a/01_agama/madhyama/MA_003.md
+++ b/01_agama/madhyama/MA_003.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 1: The Sevens | 3. The City Parable'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_002.html
 next: MA_004.html
 ---
