--- a/01_agama/madhyama/MA_004.md
+++ b/01_agama/madhyama/MA_004.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 1: The Sevens | 4. The Water Parable'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_003.html
 next: MA_005.html
 ---
