--- a/01_agama/madhyama/MA_007.md
+++ b/01_agama/madhyama/MA_007.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 1: The Sevens | 7. Worldly Merit'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_006.html
 next: MA_008.html
 ---
