--- a/01_agama/madhyama/MA_008.md
+++ b/01_agama/madhyama/MA_008.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 1: The Sevens | 8. Seven Suns'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_007.html
 next: MA_009.html
 ---
