--- a/01_agama/madhyama/MA_009.md
+++ b/01_agama/madhyama/MA_009.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 1: The Sevens | 9. Seven Chariots'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_008.html
 next: MA_010.html
 ---
