--- a/01_agama/madhyama/MA_010.md
+++ b/01_agama/madhyama/MA_010.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 1: The Sevens | 10. Ending the Contaminants'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_009.html
 next: MA_011.html
 ---
