--- a/01_agama/madhyama/MA_011.md
+++ b/01_agama/madhyama/MA_011.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 2: Related to Deeds | 11. The Rock Salt Parable'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_010.html
 next: MA_012.html
 ---
