--- a/01_agama/madhyama/MA_013.md
+++ b/01_agama/madhyama/MA_013.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 2: Related to Deeds | 13. Crossings'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_012.html
 next: MA_015.html
 ---
