--- a/01_agama/madhyama/MA_015.md
+++ b/01_agama/madhyama/MA_015.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 2: Related to Deeds | 15. Intention'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_013.html
 next: MA_016.html
 ---
