--- a/01_agama/madhyama/MA_029.md
+++ b/01_agama/madhyama/MA_029.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 3: Related to Śāriputra | 29. Mahākauṣṭhila'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_025.html
 next: MA_031.html
 ---
@@ -368,7 +368,7 @@ next: MA_031.html
 <h3 id="notes">Notes</h3>
 
 <ol>
-<li id="n1">For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0461b22" target="_blank">T26.1.461b22-4b16</a>. It’s direct parallel is <a href="https://suttacentral.net/mn9" target="_blank">MN 9</a>, and similar texts include <a href="https://suttacentral.net/mn9" target="_blank">AN 9.13</a> and <a href="https://suttacentral.net/sa344" target="_blank">SĀ 344</a>.<br/>
+<li id="n1">For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0461b22" target="_blank">T26.1.461b22-4b16</a>. It’s direct parallel is <a href="https://suttacentral.net/mn9" target="_blank">MN 9</a>, and similar texts include <a href="https://suttacentral.net/mn9" target="_blank">AN 9.13</a> and <a href="https://suttacentral.net/sa344" target="_blank">SĀ 344</a>. There is also a Sanskrit parallel titled the <cite>Dṛṣṭisampannasūtra</cite> (cf. <a href="https://suttacentral.net/sf172" target="_blank">SF 172</a>).<br/>
 In MN 9, this discourse is a lecture given by Sāriputta to an assembly of monks, but otherwise the content is very similar. [<a href="#ref1">back</a>]</li>
 <li id="n2"><em>Squirrel Park in the Bamboo Grove.</em> C. 竹林、加蘭哆園, P. <em>veḷuvana kalandakanivāpa</em>. This was a refuge created for squirrels to be fed regularly. There was a legend that it was created by a king after a squirrel woke him from a nap while a viper was slithering nearby. Feeling that he had been saved by a tree spirit in the guise of a squirrel, he decreed that the squirrels in the forest be fed as a repayment for their protection. Squirrels are famous for their bravery when combating snakes, being immune to their venom in many cases, and they bark warnings when they spot predators on the ground or in the air. It’s entirely possible that this legend was based on true events. [<a href="#ref2">back</a>]</li>
 <li id="n3"><em>Śāriputra.</em> C. 舍梨子 (EMC. ʃɪă-lɪi + “son” = Pr. <em>śariputra</em>), G. <em>śariputra</em>, P. <em>sāriputta</em>, S. <em>śāriputra</em>.<br/>
