--- a/01_agama/madhyama/MA_041.md
+++ b/01_agama/madhyama/MA_041.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 4: Unprecedented Things | 41. The Prominent Man Hastaka (2)'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_031.html
 next: MA_042.html
 ---
