--- a/01_agama/madhyama/MA_042.md
+++ b/01_agama/madhyama/MA_042.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 5: Related to Cultivation | 42. What Purpose'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_041.html
 next: MA_043.html
 ---
