--- a/01_agama/madhyama/MA_044.md
+++ b/01_agama/madhyama/MA_044.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 5: Related to Cultivation | 44. Mindfulness'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_043.html
 next: MA_045.html
 ---
