--- a/01_agama/madhyama/MA_047.md
+++ b/01_agama/madhyama/MA_047.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 5: Related to Cultivation | 47. Precepts'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_046.html
 next: MA_048.html
 ---
