--- a/01_agama/madhyama/MA_050.md
+++ b/01_agama/madhyama/MA_050.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 5: Related to Cultivation | 50. Veneration (2)'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_049.html
 next: MA_051.html
 ---
