--- a/01_agama/madhyama/MA_055.md
+++ b/01_agama/madhyama/MA_055.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 5: Related to Cultivation | 55. Nirvāṇa'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_051.html
 next: MA_056.html
 ---
