--- a/01_agama/madhyama/MA_056.md
+++ b/01_agama/madhyama/MA_056.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 5: Related to Cultivation | 56. Meghiya'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_055.html
 next: MA_057.html
 ---
