--- a/01_agama/madhyama/MA_074.md
+++ b/01_agama/madhyama/MA_074.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 7: King Dīrghāyu | 74. Eight Thoughts'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_073.html
 next: MA_075.html
 ---
