--- a/01_agama/madhyama/MA_077.md
+++ b/01_agama/madhyama/MA_077.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 7: King Dīrghāyu | 77. The Three Clansmen of Saketa'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_076.html
 next: MA_078.html
 ---
