--- a/01_agama/madhyama/MA_081.md
+++ b/01_agama/madhyama/MA_081.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 7: King Dīrghāyu | 81. Mindfulness of Body'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_080.html
 next: MA_082.html
 ---
