--- a/01_agama/madhyama/MA_082.md
+++ b/01_agama/madhyama/MA_082.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 7: King Dīrghāyu | 82. Crickets'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_081.html
 next: MA_083.html
 ---
