--- a/01_agama/madhyama/MA_095.md
+++ b/01_agama/madhyama/MA_095.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 8: Defilement | 95. Abiding in Qualities'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_092.html
 next: MA_096.html
 ---
