--- a/01_agama/madhyama/MA_096.md
+++ b/01_agama/madhyama/MA_096.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 8: Defilement | 96. Not Having'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_095.html
 next: MA_098.html
 ---
