--- a/01_agama/madhyama/MA_101.md
+++ b/01_agama/madhyama/MA_101.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 9: Causation | 101. Progressive Mental States'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_098.html
 next: MA_106.html
 ---
