--- a/01_agama/madhyama/MA_106.md
+++ b/01_agama/madhyama/MA_106.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 9: Causation | 106. Conceptions'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_101.html
 next: MA_127.html
 ---
