--- a/01_agama/madhyama/MA_127.md
+++ b/01_agama/madhyama/MA_127.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 11: The Greats | 127. Fields of Merit'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_106.html
 next: MA_137.html
 ---
