--- a/01_agama/madhyama/MA_140.md
+++ b/01_agama/madhyama/MA_140.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 11: The Greats | 140. The Extreme'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_139.html
 next: MA_146.html
 ---
