--- a/01_agama/madhyama/MA_210.md
+++ b/01_agama/madhyama/MA_210.md
@@ -2,7 +2,7 @@
 layout: default
 title: 'The Medium Discourses | Chapter 17: Potaliya | 210. The Nun Dharmadinnā'
 type: kramdown
-base: ../../../
+base: ../../
 previous: MA_204.html
 next: index.html
 ---
