--- a/01_agama/samyukta/01/SA1_160.md
+++ b/01_agama/samyukta/01/SA1_160.md
@@ -7,33 +7,41 @@ previous: SA1_159.html
 next: SA1_161.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 160 (48). Faithful (2)
+<h1><a href='../index.html'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（四八） 信</th>
+  <th class='en'>160 (48). Faithful (2)</th>
+  <tr>
+    <td title='t99.2.12a18'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus have I heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.12a19'>爾時，世尊告諸比丘： 「信心善男子正信非家、出家，自念： 『我應隨順法。 於色當多修厭住，於受⋯想⋯行⋯識多修厭住。』</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “A good son of faith who is homeless and left home out of correct faith thinks to himself, ‘I should follow the Dharma. I must live often cultivating disillusionment with form … feeling … conception … volition … live often cultivating disillusionment with awareness.’</td>
+  </tr>
+  <tr>
+    <td title='t99.2.12a21'>「信心善男子正信非家出家，於色多修厭住，於受⋯想⋯行⋯識多修厭住已。 於色得離，於受⋯想⋯行⋯識得離。 我說是等，悉離一切生、老、病、死、憂、悲、惱、苦。」</td>
+    <td id='p3'>3. “A good son of faith who is homeless and left home out of correct faith then lives often cultivating disillusionment with form … feeling … conception … volition … lives often cultivating disillusionment with awareness. He can escape from form … feeling … conception … volition … can escape from awareness.<sup id="ref2"><a href="#n2">2</a></sup> I say that he will escape from all birth, old age, illness, death, grief, sorrow, pain, and trouble.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.12a25'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
+    <td id='p4'>4. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\.  It was then that the Bhagavān addressed the monks, “A good son of correct faith who’s not at home and has left home thinks to himself, ‘I should follow the teaching. I will often cultivate disillusionment with form … feeling … conception … volition … often cultivate disillusionment with consciousness.’
-{:#p2}
+<hr/>
 
-3\. “A good son who is correctly faithful, not at home, and has left home then often cultivates disillusionment with form … feeling … conception … volition … often cultivates disillusionment with consciousness. He becomes disillusioned with form … feeling … conception … volition … becomes disillusioned with consciousness. He then attains the escape from form … feeling … conception … volition … attains the escape from consciousness. I say that he will be free from all birth, old age, illness, death, grief, sorrow, pain, and trouble.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
-{:#p4}
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 48 in the <cite>Taisho</cite> edition and no. 160 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0012a18" target="_blank">T99.2.12a18-26</a>). It’s a closer parallel with <a href="https://suttacentral.net/sn22.146" target="_blank">SN 22.146</a> than the previous <em>sūtra</em>. See also the <a href="SA1_159.html" target="_blank">notes to the previous <em>sūtra</em></a> for some discussion of issues it has in common with the present text. [<a href="#ref1">back</a>]</li>
+<li id="n2"><em>escape.</em> C. 離. Or, perhaps, “secluded” or “separated” from the aggregates. There’s no direct parallel, and 離 can trans. several related Indic words. I lean toward reading is as a trans. of a word like P. <em>nissarati</em> (“to exit, escape, depart”), given that the context is liberation from suffering. [<a href="#ref2">back</a>]</li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 12 September 2024</p>
 
-### Notes
-
-1. {:#n1} This is <em>sūtra</em> no. 48 in the <cite>Taisho</cite> edition and no. 160 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0012a18" target="_blank">T99.2.12a18-26</a>). It’s parallel with [SN 22.146](https://suttacentral.net/sn22.146){:target="_blank"}. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 21 October 2022
-{: .revised}
-
----
+<hr/>
