--- a/01_agama/samyukta/01/SA1_158.md
+++ b/01_agama/samyukta/01/SA1_158.md
@@ -7,67 +7,97 @@ previous: SA1_153.html
 next: SA1_159.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 158 (46). Worldly Food
+<h1><a href='../index.html'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（四六） 世食</th>
+  <th class='en'>158 (46). Worldly Food</th>
+  <tr>
+    <td title='t99.2.11b21'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus have I heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.11b22'>爾時，世尊告諸比丘： 「有五受陰。 云何為五？ 色、受、想、行、識受陰。 若沙門、婆羅門以宿命智自識種種宿命。 已識、當識、今識，皆於此五受陰。 已識、當識、今識：『我過去所經，如是色、如是受、如是想、如是行、如是識。』</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “There are five acquired aggregates. What are the five? The acquired aggregate of form … feeling … conception … volition … the acquired aggregate of awareness. Suppose an ascetic or priest is aware of their various past lives using the knowledge of past lives. That past awareness, future awareness, or present awareness are all about these five acquired aggregates. [They think this] about that past awareness, future awareness, or present awareness: ‘Throughout my past, my form was thus, my feeling was thus, my conception was thus, my volition was thus, and my awareness was thus.’</td>
+  </tr>
+  <tr>
+    <td title='t99.2.11b26'>「若可閡、可分，是名色受陰。 指所閡，若手、若石、若杖、若刀、若冷、若暖、若渴、若飢、若蚊、虻、諸毒虫、風、雨觸，是名觸閡。 是故閡是色受陰。 復，以此色受陰無常、苦、變易。</td>
+    <td id='p3'>3. “If something is resistant and divisible, it’s called the acquired aggregate of form. When something resists when touched by a hand, stone, stick, blade, cold, heat, thirst, hunger, biting insects, vipers, wind, or rain, it’s called contacting something resistant. Therefore, something resistant is the acquired aggregate of form. Moreover, this acquired aggregate of form is impermanent, painful, and liable to change.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.11c1'>「諸覺相是受受陰。 何所覺？ 覺苦、覺樂、覺不苦不樂。 是故，名覺相是受受陰。 復，以此受受陰是無常、苦、變易。</td>
+    <td id='p4'>4. “The aspects of sensation is the acquired aggregate of feeling. What is sensed? Pain is sensed, pleasure is sensed, and what’s neither painful nor pleasant is sensed. Therefore, we call these aspects of sensation the acquired aggregate of feeling. Moreover, this acquired aggregate of feeling is impermanent, painful, and liable to change.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.11c4'>「諸想是想受陰。 何所想？ 少想、多想、無量想、都無所有作無所有想。 是故，名想受陰。 復，以此想受陰是無常、苦、變易法。</td>
+    <td id='p5'>5. “Concepts are the acquired aggregate of conception. What’s conceived? The concept of ‘a few,’ the concept of ‘many,’ the concept of ‘measureless,’ and complete nothingness creates the concept of ‘nothingness.’ Therefore, they are called the acquired aggregate of conception. Moreover, this acquired aggregate of conception is impermanent, painful, and liable to change.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.11c6'>「為作相是行受陰。 何所為作？ 於色為作，於受⋯想⋯行⋯識為作。 是故，為作相是行受陰。 復，以此行受陰是無常、苦、變易法。</td>
+    <td id='p6'>6. “The nature of being made is the acquired aggregate of volition. What is it that’s being made? It’s form that’s being made … feeling … conception … volition … awareness being made. Therefore, the nature of being made is the acquired aggregate of volition. Moreover, this acquired aggregate of volition is impermanent, painful, and liable to change.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.11c9'>「別知相是識受陰。 何所識？ 識色，識聲、香、味、觸、法。 是故，名識受陰。 復，以此識受陰是無常、苦、變易法。</td>
+    <td id='p7'>7. “The nature of distinguishing<sup id="ref2"><a href="#n2">2</a></sup> is the acquired aggregate of awareness. It’s aware of what? It’s aware of form … sound … odor … flavor … touch … aware of ideas. Therefore, this is called the acquired aggregate of awareness. Moreover, this acquired aggregate of awareness is impermanent, painful, and liable to change.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.11c11'>「諸比丘，彼多聞聖弟子於此色受陰作如是學： 『我今為現在色所食，過去世已曾為彼色所食，如今現在。』 復作是念： 『我今為現在色所食。 我若復樂著未來色者，當復為彼色所食，如今現在。』 作如是知已，不顧過去色，不樂著未來色，於現在色生厭。 離欲、滅患、向滅。</td>
+    <td id='p8'>8. “Monks, that well-versed noble disciple trains in this way regarding this acquired aggregate of form: ‘I’m being eaten by this present form, and I’ve been eaten by the forms I had in past lives just as I am now.’ Again, they think, ‘I’m being eaten by this present form. If I were to delight in a future form, I’ll be eaten by that form just as I am now.’ After knowing this, they don’t look back at past form, don’t delight in future form, and become disillusioned with this present form. They part with desire for it and completely cease it.<sup id="ref3"><a href="#n3">3</a></sup></td>
+  </tr>
+  <tr>
+    <td title='t99.2.11c18'>「多聞聖弟子於此受⋯想⋯行⋯識受陰學： 『我今現在為現在識所食，於過去世已曾為識所食，如今現在。 我今已為現在識所食。 若復樂著未來識者，亦當復為彼識所食，如今現在。』 如是知已，不顧過去識，不樂未來識，於現在識生厭。 離欲、滅患、向滅。</td>
+    <td id='p9'>9. “A noble disciple trains in this way regarding this acquired aggregate of feeling … conception … volition … awareness: ‘‘I’m being eaten by this present awareness, and I’ve been eaten by the awareness I had in past lives just as I am now. I’m being eaten by this present awareness. If I were to delight in future awareness, I’ll be eaten by that awareness just as I am now.’ After knowing this, they don’t look back at past awareness, don’t delight in future awareness, and become disillusioned with this present awareness. They part with desire for it and completely cease it.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.11c24'>「滅而不增，退而不進，滅而不起，捨而不取。 於何滅而不增？ 色滅而不增。 受⋯想⋯行⋯識滅而不增。 於何退而不進？ 色退而不進。 受⋯想⋯行⋯識退而不進。 於何滅而不起？ 色滅而不起。 受⋯想⋯行⋯識滅而不起。 於何捨而不取？ 色捨而不取。 受⋯想⋯行⋯識捨而不取。</td>
+    <td id='p10'>10. “They decrease and don’t increase,<sup id="ref4"><a href="#n4">4</a></sup> retreat and don’t advance, cease and aren’t produced, and are abandoned and not accepted. What decreases and doesn’t increase? Form decreases and doesn’t increase. Feeling … conception … volition … awareness decreases and doesn’t increase. What retreats and doesn’t advance? Form retreats and doesn’t advance. Feeling … conception … volition … awareness retreats and doesn’t advance. What ceases and isn’t produced? Form ceases and isn’t produced. Feeling … conception … volition … awareness ceases and isn’t produced. What’s abandoned and not accepted? Form is abandoned and not accepted. Feeling … conception … volition … awareness is abandoned and not accepted.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.11c29'>「滅而不增，寂滅而住。 退而不進，寂退而住。 滅而不起，寂滅而住。 捨而不取，不生繫著。 不繫著已，自覺涅槃： 『我生已盡，梵行已立，所作已作。 自知不受後有。』」</td>
+    <td id='p11'>11. Decreasing and not increasing, they peacefully decrease and abide. Retreating and not advancing, they peacefully retreat and abide. Ceasing and not producing, they peacefully cease and abide. Abandoning and not accepting, they don’t become attached [to the aggregates]. Once the disciple isn’t attached to them, they themselves realize <em>nirvāṇa</em>: ‘My births have been ended, the religious life has been established, and the task has been accomplished. I myself know I won’t be subject to a later existence.’”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.12a4'>佛說此經時，眾多比丘不起諸漏，心得解脫。</td>
+    <td id='p12'>12. When the Buddha spoke this <em>sūtra</em>, a group of monks didn’t produce the contaminants, and their minds were liberated.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.12a5'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
+    <td id='p13'>13. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
+  </tr>
+<tr>
+  <td title='t99.2.12a7'></td>
+  <td class='subheading'>Summary Verse</td>
+</tr>
+<tr>
+  <td title='t99.2.12a7'><ul class='verse'>
+    <li>我、卑下、種子、<br/>
+    封滯、五轉、七、<br/>
+    二繫著及覺、<br/>
+    三世陰、世食。</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>[149] Myself, [150] lowly, [151] seeds,<br/>
+    [152] Involvement, [153] five turns, [154] seven,<br/>
+    [155-156] Two on bondage and awakening,<br/>
+    [157] Aggregates in three times, and [158] worldly food.</li>
+  </ul></td>
+</tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “There are five acquired aggregates. What are the five? The acquired aggregate of form … feeling … conception … volition … the acquired aggregate of consciousness. Suppose ascetics or priests are aware of their various past lives using the knowledge of past lives. That past consciousness, future consciousness, or present consciousness [that’s recollected] are all these five acquired aggregates. About that past consciousness, future consciousness, or present consciousness, [they think]:  ‘Throughout my past, my form was thus, my feeling was thus, my conception was thus, my volition was thus, and my consciousness was thus.’
-{:#p2}
+<hr/>
 
-3\. “If something is resistant and divisible, it’s called the acquired aggregate of form. When something resists when touched by hand, stone, stick, blade, cold, heat, thirst, hunger, biting insects, vipers, wind, or rain, it’s called resistant contact. Therefore, something resistant is the acquired aggregate of form. Moreover, this acquired aggregate of form is impermanent, painful, and liable to change.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “The aspects of sensation is the acquired aggregate of feeling. What is felt? Pain is felt, pleasure is felt, and what’s neither painful nor pleasant is felt; therefore, we call these aspects of sensation the acquired aggregate of feeling. Moreover, this acquired aggregate of feeling is impermanent, painful, and liable to change.
-{:#p4}
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 46 in the <cite>Taisho</cite> edition and no. 158 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0011b21" target="_blank">T99.2.11b21-12a8</a>). It’s parallel with <a href="https://suttacentral.net/sn22.79" target="_blank">SN 22.79</a>. Note that there are some significant departures between the two versions. [<a href="#ref1">back</a>]</li>
+<li id="n2"><em>distinguishing</em>. The Chinese here could be a literal translation of <em>vi-</em> (別) <em>-jñā-</em> (知), meaning “separate knowing.” I’ve matched this to English “distinguish” in the sense of discerning something separately from other things. In SN 22.79, the parallel verb is <em>vijānāti</em>, which can mean “comprehends, understands, recognises, distinguishes, is aware (of).” [<a href="#ref2">back</a>]</li>
+<li id="n3"><em>completely cease</em>. C. 滅患. The Taisho reading, which lit. means “ceasing troubles,” doesn’t occur anywhere else in SĀ. Yinshun suggests amending 滅患 to 滅盡, but I would go further and suggest amending 滅患、向滅 to 正向滅盡 (“correctly headed to complete cessation”). The entire expression 厭、離欲、正向滅盡 occurs in SĀ 1.11-14 (8), and the more concise 離欲、滅盡 occurs dozens of times throughout SĀ. 向滅 only occurs here and in SĀ 1.11-14, so it doesn’t seem to belong. [<a href="#ref3">back</a>]</li>
+<li id="n4"><em>decrease and don’t increase</em>. C. 滅而不增. Given that 滅 is repeated again in the expression 滅而不起 (“ceased and aren’t produced”), I’ve followed Yinshun’s suggestion to amend 滅 (“cease, destroy”) to 減 (“decrease, reduce”) in this expression. There is also an occurrence of the expression 減而不增 alongside 滅而不起 in SĀ 1.177 (109). [<a href="#ref4">back</a>]</li>
+</ol>
+<hr/>
 
-5\. “Conceptions are the acquired aggregate of conception. What’s conceived? The concept ‘few,’ the concept ‘many,’ the concept ‘measureless,’ and complete nothingness creates the concept ‘nothingness;’ therefore, they are called the acquired aggregate of conception. Moreover, this acquired aggregate of conception is impermanent, painful, and liable to change.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 11 September 2024</p>
 
-6\. “The nature of acting is the acquired aggregate of volition. What acts? It’s the acting of form … feeling … conception … volition … the acting of consciousness; therefore, the nature of acting is the acquired aggregate of volition. Moreover, this acquired aggregate of volition is impermanent, painful, and liable to change.
-{:#p6}
-
-7\. “The nature of distinguishing[\[2\]](#n2){:#ref2} is the acquired aggregate of consciousness. What’s cognized? Form is cognized … sound … odor … flavor … touch … ideas are cognized; therefore, this is called the acquired aggregate of consciousness. Moreover, this acquired aggregate of consciousness is impermanent, painful, and liable to change.
-{:#p7}
-
-8\. “Monks, well-versed noble disciples train in this way regarding this acquired aggregate of form: ‘My present form that’s made of food is like the forms I had that were made of food during past lives. They were like the present.’ Again, disciples think, ‘My present form that’s made of food will be like the future forms that I’ll have if I continue to be attached to pleasure. Those forms made of food will continue to be like this present one.’ After knowing this, they don’t look back at past form, aren’t attached to the pleasure of future form, and become disillusioned with present form. They part with desire, extinguish it, and head for cessation.
-{:#p8}
-
-9\. “Noble disciples train in this way regarding this acquired aggregate of feeling … conception … volition … consciousness: ‘My present consciousness that’s made of food is like the former consciousness made of food that I had during past lives. They were like this present one.’ … ‘My present consciousness that’s made of food will be like my future consciousness if I continue to be attached to pleasure. That consciousness that’s made of food will also be like this present one.’ After knowing this, they don’t look back at past consciousness, aren’t attached to the pleasure of future consciousness, and become disillusioned with present consciousness. They part with desire, extinguish it, and head for cessation.
-{:#p9}
-
-10\. “They decrease and don’t increase; retreat and don’t advance; cease and aren’t produced; and are abandoned and not acquired. What’s decreased and not increased? Form decreases and doesn’t increase. Feeling … conception … volition … consciousness decreases and doesn’t increase. What retreats and doesn’t advance? Form retreats and doesn’t advance. Feeling … conception … volition … consciousness retreats and doesn’t advance. What ceases and isn’t produced? Form ceases and isn’t produced. Feeling … conception … volition … consciousness ceases and isn’t produced. What’s abandoned and not acquired? Form is abandoned and not acquired. Feeling … conception … volition … consciousness is abandoned and not acquired.
-{:#p10}
-
-11\. “Decreasing and not increasing, they peacefully decrease and abide. Retreating and not advancing, they peacefully retreat and abide. Ceasing and not produced, they peacefully cease and abide. Abandoned and not acquired, they don’t give rise to attachment. After this disciple is not attached to [the aggregates], they themselves realize Nirvāṇa: ‘My births have been ended, the religious life has been established, and the task has been accomplished. I myself know I’m not subject to a later existence.’”
-{:#p11}
-
-12\. When the Buddha spoke this sūtra, a group of monks didn’t produce the contaminants, and their minds were liberated.
-{:#p12}
-
-13\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
-{:#p13}
-
-#### Summary Verse
-* {:.verse}[149] Myself, [150] lowly, [151] seeds,\\
-[152] Involvement, [153] five turns, [154] seven,\\
-[155-156] Two on bondage and awakening,\\
-[157] Aggregates of three times and [158] worldly food.
-
----
-
-### Notes
-
-1. {:#n1} This is <em>sūtra</em> no. 46 in the <cite>Taisho</cite> edition and no. 158 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0011b21" target="_blank">T99.2.11b21-12a8</a>). It’s parallel with [SN 22.79](https://suttacentral.net/sn22.79){:target="_blank"}. Note that there are some significant departures between the two versions. [\[back\]](#ref1)
-2. {:#n2} <em>distinguishing</em>. The Chinese here could be a literal translation of <em>vi-</em> (別) <em>-jñā-</em> (知). [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 10 November 2023
-{: .revised}
-
----
+<hr/>
