--- a/01_agama/samyukta/01/SA1_163.md
+++ b/01_agama/samyukta/01/SA1_163.md
@@ -3,39 +3,46 @@ layout: default
 title: 'The Related Discourses | 1. The Aggregates | 163 (51). What’s Destroyed'
 type: kramdown
 base: ../../../
-previous: SA1_161.html
+previous: SA1_162.html
 next: SA1_172.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 163 (51). What’s Destroyed
+<h1><a href='../index.html'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（五一） 壞法</th>
+  <th class='en'>163 (51). What’s Destroyed</th>
+  <tr>
+    <td title='t99.2.12b25'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus have I heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.12b26'>爾時，世尊告諸比丘： 「我今為汝說壞、不壞法。 諦聽，善思。當為汝說。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Now, I will discuss for you the things that are destroyed and those are aren’t destroyed.<sup id="ref2"><a href="#n2">2</a></sup> Listen closely, and consider it well. I will explain this for you.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.12b27'>「諸比丘，色是壞法，彼色滅涅槃是不壞法。 受⋯想⋯行⋯識是壞法，彼識滅涅槃是不壞法。」</td>
+    <td id='p3'>3. “Monks, form is something that’s destroyed, but the cessation and <em>nirvāṇa</em> of that form is not something that’s destroyed.<sup id="ref3"><a href="#n3">3</a></sup> Feeling … conception … volition … awareness is something that’s destroyed, but the cessation and <em>nirvāṇa</em> of that awareness is not something that’s destroyed.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.12b29'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
+    <td id='p4'>4. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “Now, I will discuss things that are destroyed and not destroyed.[\[2\]](#n2){:#ref2} Listen closely, and consider it well. I will explain this for you.
-{:#p2}
+<hr/>
 
-3\. “Monks, form is something destroyed, but the cessation and extinguishment[\[3\]](#n3){:#ref3} of that form is not something that’s destroyed. Feeling … conception … volition … consciousness is something destroyed, but the cessation and extinguishment of that consciousness is not something that’s destroyed.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
-{:#p4}
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 51 in the <cite>Taisho</cite> edition and no. 163 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0012b25" target="_blank">T99.2.12b25-c1</a>). It’s parallel with <a href="https://suttacentral.net/sn22.32" target="_blank">SN 22.32</a>. The only significant difference is the choice of synonyms for the cessation of the aggregates. Here, a word like <em>nirvāṇa</em> occurs, but not in SN 22.32. [<a href="#ref1">back</a>]</li>
+<li id="n2"><em>destroyed</em>. C. 壞, P. <em>pabhaṅga</em>, S. <em>prabhanakti</em> or <em>prabhañjana</em> (?). The Pali parallel has <em>pabhaṅga</em>, which is often interpreted as “fragile, brittle, perishable” but which can mean “destroyed.” 壞 often means simply “to be destroyed,” but it has the connotation of gradual destruction, so it often means something more like “decay, erode, ruin.” [<a href="#ref2">back</a>]</li>
+<li id="n3"><em>nirvāṇa</em>. C. 涅槃. I believe here the C. may have translated a verbal adjective or participle with the same root as S. <em>nirvāṇa</em>. This passage shows, though, that <em>nirvāṇa</em> was not considered identical to cessation but rather a close synonym. The Pali parallel lists two other synonyms for cessation (<em>nirodha</em>): “pacification and disappearance” (<em>vūpasama atthaṅgama</em>). [<a href="#ref3">back</a>]</li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 14 September 2024</p>
 
-### Notes
-
-1. {:#n1} This is <em>sūtra</em> no. 51 in the <cite>Taisho</cite> edition and no. 163 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0012b25" target="_blank">T99.2.12b25-c1</a>). It’s parallel with [SN 22.32](https://suttacentral.net/sn22.32){:target="_blank"}. [\[back\]](#ref1)
-2. {:#n2}<em>destroyed</em>. C. 壞. The Pali parallel has <em>pabhaṅga</em>, which Pali commentators interpreted as “fragile” or “brittle,” but which can mean “destroyed.” 壞 often means simply “to be destroyed,” but it has the connotation of gradual destruction, so it often means something more like “eroded” or “ruined.” In both cases, there’s a sense of destruction over time (i.e., impermanence).
-3. {:#n3}<em>extinguishment</em>. C. 涅槃. I believe here the Chinese is transliterating a verb related to nirvāṇa that’s here a participle meaning “extinguished.” The Pali parallel lacks this, giving two other synonyms for cessation: <em>nirodho vūpasamo atthaṅgamo</em>. [\[back\]](#ref3)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 10 November 2023
-{: .revised}
-
----
+<hr/>
