--- a/01_agama/samyukta/01/SA1_25.md
+++ b/01_agama/samyukta/01/SA1_25.md
@@ -18,8 +18,8 @@ next: SA1_26.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td title='t99.2.4a29'>爾時，有異比丘從座起⋯ 為佛作禮⋯。 而白佛言： 「⋯世尊，為我略說法要。 我聞法已，當獨一靜處，專精思惟，不放逸住。 不放逸住已，思惟： 『所以善男子正信家非家出家⋯乃至⋯自知不受後有。』」</td>
-    <td id='p2'>2. There was then a certain monk who rose from his seat. [He adjusted his robes to bare his right shoulder,] bowed to the Buddha, [and withdrew to stand at one side]. He then said to the Buddha, “[It would be good,] Bhagavān, if you were to give me a brief explanation of the Dharma. Having listened to the Dharma, I will go alone to a quiet place, focus on contemplation, and live earnestly. Having lived earnestly, I’ll then think, “A good son leaves home, cuts off his hair and beard, puts on the Dharma robes, believes at home in being homeless, and leaves home … <em>up to</em> … ‘“I myself know that I won’t be subject to a later existence.”’”</td>
+    <td title='t99.2.4a29'>爾時，有異比丘從座起⋯為佛作禮⋯。 而白佛言： 「⋯世尊，為我略說法要。 我聞法已，當獨一靜處，專精思惟，不放逸住。 不放逸住已，思惟： 『所以善男子⋯正信家非家出家⋯ 乃至⋯自知不受後有。』」</td>
+    <td id='p2'>2. There was then a certain monk who rose from his seat. [He adjusted his robes to bare his right shoulder,] bowed to the Buddha, [and withdrew to stand at one side]. He then said to the Buddha, “[It would be good,] Bhagavān, if you were to give me a brief explanation of the Dharma. Having listened to the Dharma, I will go alone to a quiet place, focus on contemplation, and live earnestly. Having lived earnestly, I’ll then think, “A good son [leaves home, cuts off his hair and beard, puts on the Dharma robes,] believes at home in being homeless, and leaves home … <em>up to</em> … ‘“I myself know that I won’t be subject to a later existence.”’”</td>
   </tr>
   <tr>
     <td title='t99.2.4b4'>爾時，世尊告彼比丘： 「善哉，善哉！汝今作是說： 『善哉，世尊，為我略說法要。 我聞法已，當獨一靜處，專精思惟，不放逸住⋯乃至⋯ 「『自知不受後有』」』⋯耶？」</td>
@@ -65,6 +65,6 @@ next: SA1_26.html
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 29 February 2024</p>
+<p class='revised'>Last Revised: 17 September 2024</p>
 
 <hr/>
