--- a/01_agama/samyukta/01/SA1_27.md
+++ b/01_agama/samyukta/01/SA1_27.md
@@ -18,20 +18,20 @@ next: SA1_28.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td title='t99.2.4b27'>爾時，有異比丘從坐起⋯為佛作禮⋯。 而白佛言： 「世尊，為我略說法要。 我聞法已，當獨一靜處，專精思惟，不放逸住。 不放逸住已，思惟： 『所以善男子正信非家出家⋯乃至⋯ 「自知不受後有。」』」</td>
-    <td id='p2'>2. There was then a certain monk who rose from his seat, [adjusted his robes to bare his right shoulder,] bowed to the Buddha, [and withdrew to stand at one side]. He then said to the Buddha, “[It would be good,] Bhagavān, if you were to give me a brief explanation of the Dharma. Having listened to the Dharma, I will go alone to a quiet place, focus on contemplation, and live earnestly. Having lived earnestly, I’ll then think, “A good son leaves home, cuts off his hair and beard, puts on the Dharma robes, believes at home in being homeless, and leaves home … <em>up to</em> … ‘“I myself know that I won’t be subject to a later existence.”’”</td>
+    <td title='t99.2.4b27'>爾時，有異比丘從坐起⋯為佛作禮⋯。 而白佛言： 「世尊，為我略說法要。 我聞法已，當獨一靜處，專精思惟，不放逸住。 不放逸住已，思惟： 『所以善男子⋯正信非家、出家⋯ 乃至⋯「自知不受後有。」』」</td>
+    <td id='p2'>2. There was then a certain monk who rose from his seat, [adjusted his robes to bare his right shoulder,] bowed to the Buddha, [and withdrew to stand at one side]. He then said to the Buddha, “[It would be good,] Bhagavān, if you were to give me a brief explanation of the Dharma. Having listened to the Dharma, I will go alone to a quiet place, focus on contemplation, and live earnestly. Having lived earnestly, I’ll then think, “A good son [leaves home, cuts off his hair and beard, puts on the Dharma robes,] believes at home in being homeless, and leaves home … <em>up to</em> …‘“I myself know that I won’t be subject to a later existence.”’”</td>
   </tr>
   <tr>
-    <td title='t99.2.4c2'>爾時，世尊告彼比丘： 「善哉，善哉！汝今作是說： 『善哉，世尊，為我略說法要。 我聞法已，當獨一靜處，專精思惟，不放逸住⋯乃至⋯ 「『自知不受後有』」』⋯耶？」</td>
+    <td title='t99.2.4c2'>爾時，世尊告彼比丘： 「善哉，善哉！汝今作是說： 『善哉，世尊，為我略說法要。 我聞法已，當獨一靜處，專精思惟，不放逸住⋯ 乃至⋯「『自知不受後有』」』⋯耶？」</td>
     <td id='p3'>3. The Bhagavān then told that monk, “Good! It’s good that you said, ‘It would be good, Bhagavān, if you were to give me a brief explanation of the Dharma. Having listened to the Dharma, I’ll go alone to a quiet place, focus on contemplation, and live earnestly … <em>up to</em> … “‘I myself know that I won’t be subject to a later existence.’”’ [Is this what you said?]”</td>
   </tr>
   <tr>
-    <td title='t99.2.4c5'>比丘白佛言： 「如是，世尊！」</td>
+    <td title='t99.2.4c5'>比丘白佛言： 「如是，世尊。」</td>
     <td>The monk said to the Buddha, “Yes, Bhagavān.”</td>
   </tr>
   <tr>
     <td title='t99.2.4c6'>佛告比丘： 「諦聽！諦聽，善思念之。 當為汝說。 比丘，動搖時則為魔所縛。 若不動者則解脫波旬。」</td>
-    <td id='p4'>4. The Buddha addressed the monk, “Listen closely! Listen closely, and consider it well. I will explain this for you. Monk, if one is shaken,<sup id="ref2"><a href="#n2">2</a></sup> they are tied up by Māra. If one isn’t shaken, then they are free of Māra.”</td>
+    <td id='p4'>4. The Buddha addressed the monk, “Listen closely! Listen closely, and consider it well. I will explain this for you. Monk, when one is shaken, they are tied up by Māra. If one isn’t shaken, then they are free of Māra.”<sup id="ref2"><a href="#n2">2</a></sup></td>
   </tr>
   <tr>
     <td title='t99.2.4c8'>比丘白佛言： 「知已，世尊！ 知已，善逝！」</td>
@@ -43,14 +43,14 @@ next: SA1_28.html
   </tr>
   <tr>
     <td title='t99.2.4c10'>比丘白佛言： 「世尊，色動搖時則為魔所縛。 若不動者則解脫波旬。 如是，受⋯想⋯行⋯識動搖時則為魔所縛。 若不動者則解脫波旬。 是故，我於世尊略說法中廣解其義。」</td>
-    <td id='p6'>6. The monk said to the Buddha, “Bhagavān, if form shakes [a person], then they are tied up by Māra. If someone isn’t shaken by it, then they are free of Māra. Thus, if feeling … conception … volition … awareness shakes them, then they are tied up by Māra. If someone isn’t shaken by it, then they are free of Māra. Therefore, I understand the meaning of the Bhagavān’s brief explanation of the Dharma in full.”</td>
+    <td id='p6'>6. The monk said to the Buddha, “Bhagavān, when form shakes [a person], then they are tied up by Māra. If someone isn’t shaken by it, then they are free of Māra. Thus, when feeling … conception … volition … awareness shakes them, then they are tied up by Māra. If someone isn’t shaken by it, then they are free of Māra. Therefore, I understand the meaning of the Bhagavān’s brief explanation of the Dharma in full.”</td>
   </tr>
   <tr>
     <td title='t99.2.4c14'>佛告比丘： 「善哉！善哉，汝於我略說法中廣解其義。 所以者何？ 若色動搖時則為魔所縛。 若不動者則解脫波旬。 如是，受⋯想⋯行⋯識動搖時則為魔所縛。 若不動者則解脫波旬。 」</td>
-    <td id='p7'>7. The Buddha said, “Good! It’s good, monk, that you understand the meaning of my brief explanation of the Dharma in full. Why is that? If form shakes a person, then they are tied up by Māra. If someone isn’t shaken by it, then they are free of Māra. Thus, if feeling … conception … volition … awareness shakes them, then they are tied up by Māra. If someone isn’t shaken by it, then they are free of Māra.”</td>
+    <td id='p7'>7. The Buddha said, “Good! It’s good that you understand the meaning of my brief explanation of the Dharma in full. Why is that? When form shakes a person, then they are tied up by Māra. If someone isn’t shaken by it, then they are free of Māra. Thus, when feeling … conception … volition … awareness shakes them, then they are tied up by Māra. If someone isn’t shaken by it, then they are free of Māra.”</td>
   </tr>
   <tr>
-    <td title='t99.2.4c18'>⋯乃至⋯「『自知不受後有』」 ⋯心得解脫，成阿羅漢。</td>
+    <td title='t99.2.4c18'>⋯乃至⋯「『自知不受後有』」⋯ 心得解脫，成阿羅漢。</td>
     <td id='p8'>8. … <em>Up to</em> … “‘I myself know that I won’t be subject to a later existence’” … His mind was liberated, and he became an <em>arhat</em>.”</td>
   </tr>
 </table>
@@ -66,6 +66,6 @@ next: SA1_28.html
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 29 February 2024</p>
+<p class='revised'>Last Revised: 17 September 2024</p>
 
 <hr/>
