--- a/01_agama/samyukta/01/SA1_29.md
+++ b/01_agama/samyukta/01/SA1_29.md
@@ -18,8 +18,8 @@ next: SA1_30.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at the Kalandaka Bamboo Grove of Rājagṛha.</td>
   </tr>
   <tr>
-    <td title='t99.2.5a12'>爾時，尊者羅睺羅往詣佛所。 頭面禮足，却住一面，白佛言： 「世尊，云何知、云何見我此識身及外境界一切相能令無有我、我所見、我慢使繫著？」</td>
-    <td id='p2'>2. It was then that Venerable Rāhula visited the Buddha. He bowed his head at the Buddha’s feet, withdrew to sit at one side, and said, “Bhagavān, how do I know and how do I see this body of awareness and all the signs of the external world such that I’ll have no binding attachments to views of self and what belongs to self or to the tendency of self pride?”</td>
+    <td title='t99.2.5a12'>爾時，尊者羅睺羅往詣佛所。 頭面禮足，却住一面。 白佛言： 「世尊，云何知、云何見我此識身及外境界一切相能令無有我、我所見、我慢使繫著？」</td>
+    <td id='p2'>2. It was then that Venerable Rāhula visited the Buddha. He bowed his head at the Buddha’s feet, withdrew to sit at one side. He then said to the Buddha, “Bhagavān, how do I know and how do I see this body of awareness and all the signs of the external world such that I’ll have no binding attachments to views of self and what belongs to self or to the tendency of self pride?”</td>
   </tr>
   <tr>
     <td title='t99.2.5a15'>佛告羅睺羅： 「善哉！善哉，能問如來： 『云何知、云何見我此識身及外境界一切相令無有我、我所見、我慢使繫著耶？』！」</td>
@@ -63,6 +63,6 @@ A comparison of this <em>sūtra</em> with SĀ 2.41-48 is instructive in the inst
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 29 February 2024</p>
+<p class='revised'>Last Revised: 17 September 2024</p>
 
 <hr/>
