--- a/01_agama/samyukta/01/SA1_31.md
+++ b/01_agama/samyukta/01/SA1_31.md
@@ -18,11 +18,11 @@ next: SA1_32.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td title='t99.2.5b29'>時，有異比丘來詣佛所，為佛作禮，却住一面，白佛言： 「如世尊說多聞，云何為多聞？」</td>
+    <td title='t99.2.5b29'>時，有異比丘來詣佛所。 為佛作禮，却住一面。 白佛言： 「如世尊說『多聞』，云何為多聞？」</td>
     <td id='p2'>2. It was then that a certain monk came to visit the Buddha. He bowed to the Buddha and withdrew to stand at one side. He said to the Buddha, “As the Bhagavān says ‘well versed,’ how is one well versed?”</td>
   </tr>
   <tr>
-    <td title='t99.2.5c2'>佛告比丘： 「善哉！善哉！汝今問我多聞義耶？」</td>
+    <td title='t99.2.5c2'>佛告比丘： 「善哉，善哉！汝今問我多聞義耶？」</td>
     <td id='p3'>3. The Buddha said to that monk, “Good, good! Are you asking me now about the meaning of ‘well versed’?”</td>
   </tr>
   <tr>
@@ -30,11 +30,11 @@ next: SA1_32.html
     <td>The monk said to the Buddha, “Indeed, Bhagavān.”</td>
   </tr>
   <tr>
-    <td title='t99.2.5c3'>佛告比丘： 「諦聽，善思，當為汝說。 比丘當知，若聞色是生厭、離欲、滅盡、寂靜法，是名多聞； 如是聞受、想、行、識，是生厭、離欲、滅盡、寂靜法，是名多聞。 比丘，是名如來所說多聞。」</td>
+    <td title='t99.2.5c3'>佛告比丘： 「諦聽，善思。 當為汝說。 比丘，當知，若聞色是生厭、離欲、滅盡、寂靜法，是名多聞。 如是，聞受⋯想⋯行⋯識是生厭、離欲、滅盡、寂靜法，是名多聞。 比丘，是名如來所說多聞。」</td>
     <td id='p4'>4. The Buddha told the monk, “[Listen closely!] Listen closely, and consider it well. I will explain it for you. Monk, you should know that if one learns about becoming disillusioned with form, becoming free of desire for it, completely ceasing it, and the principle of peace,<sup id="ref2"><a href="#n2">2</a></sup> this is called being well versed. Thus, if one learns about becoming disillusioned with feeling … conception … volition … awareness, becoming free of desire for it, completely ceasing it, and the principle of peace, this is called being well versed. Monk, this is what the Tathāgata says is being well versed.”</td>
   </tr>
   <tr>
-    <td title='t99.2.5c7'>時，彼比丘聞佛所說，踊躍歡喜，作禮而去。</td>
+    <td title='t99.2.5c7'>時，彼比丘聞佛所說，踊躍歡喜。 作禮而去。</td>
     <td id='p5'>5. When that monk heard what the Buddha taught, he celebrated and rejoiced. Then, he bowed and departed.</td>
   </tr>
 </table>
@@ -51,6 +51,6 @@ The three steps of disillusionment with, becoming free of desire for, and comple
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 29 February 2024</p>
+<p class='revised'>Last Revised: 27 December 2023</p>
 
 <hr/>
