--- a/01_agama/samyukta/01/SA1_28.md
+++ b/01_agama/samyukta/01/SA1_28.md
@@ -18,8 +18,8 @@ next: SA1_29.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td title='t99.2.4c21'>爾時，有比丘名劫波來詣佛所。 頭面禮足，却住一面，白佛言： 「如世尊說『比丘心得善解脫。』 世尊，云何比丘心得善解脫？」</td>
-    <td id='p2'>2. It was then that the monk Kappa<sup id="ref2"><a href="#n2">2</a></sup> came to visit the Buddha. He bowed his head at the Buddha’s feet and withdrew to stand at one side. he said to the Buddha, “The Bhagavān says ‘a monk’s mind becomes well liberated.’  Bhagavān, how does a monk’s mind become well liberated?”</td>
+    <td title='t99.2.4c21'>爾時，有比丘名劫波來詣佛所。 頭面禮足，却住一面。 白佛言： 「如世尊說『比丘心得善解脫。』 世尊，云何比丘心得善解脫？」</td>
+    <td id='p2'>2. It was then that the monk Kappa<sup id="ref2"><a href="#n2">2</a></sup> came to visit the Buddha. He bowed his head at the Buddha’s feet and withdrew to stand at one side. He then said to the Buddha, “The Bhagavān says ‘a monk’s mind becomes well liberated.’  Bhagavān, how does a monk’s mind become well liberated?”</td>
   </tr>
   <tr>
     <td title='t99.2.4c24'>爾時，世尊告劫波曰： 「善哉！善哉能問如來心善解脫。 善哉，劫波！諦聽！諦聽，善思念之。 當為汝說。</td>
@@ -54,6 +54,6 @@ next: SA1_29.html
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 29 February 2024</p>
+<p class='revised'>Last Revised: 17 September 2024</p>
 
 <hr/>
