--- a/01_agama/samyukta/01/SA1_32.md
+++ b/01_agama/samyukta/01/SA1_32.md
@@ -18,15 +18,15 @@ next: SA1_33.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td title='t99.2.5c10'>爾時，有異比丘來詣佛所，頭面禮足，却住一面，白佛言： 「如世尊所說法師，云何名為法師？」</td>
+    <td title='t99.2.5c10'>爾時，有異比丘來詣佛所。 頭面禮足，却住一面。 白佛言： 「如世尊所說『法師』，云何名為法師？」</td>
     <td id='p2'>2. It was then that a certain monk came to visit the Buddha. He bowed to the Buddha and withdrew to stand at one side. He said to the Buddha, “As the Bhagavān says ‘Dharma teacher,’ what is a Dharma teacher?”</td>
   </tr>
   <tr>
-    <td title='t99.2.5c12'>佛告比丘： 「善哉！善哉！汝今欲知如來所說法師義耶？」</td>
-    <td id='p3'>3. The Buddha asked that monk, “Good, good! Do you want now to know about the meaning of the Tathagāta’s expression ‘Dharma teacher’?”</td>
+    <td title='t99.2.5c12'>佛告比丘： 「善哉，善哉！汝今欲知如來所說法師義耶？」</td>
+    <td id='p3'>3. The Buddha asked that monk, “Good, good! Do you want now to know about the meaning of what the Tathagāta says is a ‘Dharma teacher’?”</td>
   </tr>
   <tr>
-    <td title='t99.2.5c13'>比丘白佛： 「唯然，世尊！」</td>
+    <td title='t99.2.5c13'>比丘白佛： 「唯然，世尊。」</td>
     <td>That monk said to the Buddha, “Indeed, Bhagavān.”</td>
   </tr>
   <tr>
@@ -34,11 +34,11 @@ next: SA1_33.html
     <td>The Buddha told the monk, “[Listen closely!] Listen closely, and well consider it. I will explain it for you.”</td>
   </tr>
   <tr>
-    <td title='t99.2.5c14'>佛告比丘： 「若於色說是生厭、離欲、滅盡、寂靜法者，是名法師； 若於受、想、行、識，說是生厭、離欲、滅盡、寂靜法者，是名法師。 是名如來所說法師。」</td>
-    <td id='p4'>4. The Buddha told the monk, “If someone teaches about becoming disillusioned with form, becoming free of desire for it, completely ceasing it, and the principle of peace, they are called a Dharma teacher. If they teach about becoming disillusioned with feeling … conception … volition … awareness, becoming free of desire for it, completely ceasing it, and the principle of peace, they are called a Dharma teacher. This is what the Tathāgata says is a Dharma teacher.”</td>
+    <td title='t99.2.5c14'>佛告比丘： 「若於色說是生厭、離欲、滅盡、寂靜法者，是名法師。 若於受⋯想⋯行⋯識說是生厭、離欲、滅盡、寂靜法者，是名法師。 是名如來所說法師。」</td>
+    <td id='p4'>4. The Buddha told the monk, “If someone teaches about becoming disillusioned with form, becoming free of desire for it, completely ceasing it, and the principle of peace, they are called a Dharma teacher. If they teach about becoming disillusioned with feeling … conception … volition … awareness, becoming free of desire for it, completely ceasing it, and the principle of peace, they are called a Dharma teacher. This is what the Tathāgata calls a Dharma teacher.”</td>
   </tr>
   <tr>
-    <td title='t99.2.5c18'>時，彼比丘聞佛所說，踊躍歡喜，作禮而去。</td>
+    <td title='t99.2.5c18'>時，彼比丘聞佛所說，踊躍歡喜。 作禮而去。</td>
     <td id='p5'>5. When that monk heard what the Buddha taught, he celebrated and rejoiced. He then bowed and departed.</td>
   </tr>
 </table>
@@ -53,6 +53,6 @@ next: SA1_33.html
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 29 February 2024</p>
+<p class='revised'>Last Revised: 17 September 2024</p>
 
 <hr/>
