--- a/01_agama/samyukta/01/SA1_34.md
+++ b/01_agama/samyukta/01/SA1_34.md
@@ -18,15 +18,15 @@ next: SA1_35.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td title='t99.2.6a1'>爾時，有異比丘來詣佛所，頭面禮足，却住一面，白佛言： 「世尊！如世尊所說得見法涅槃，云何比丘得見法涅槃？」</td>
+    <td title='t99.2.6a1'>爾時，有異比丘來詣佛所。 頭面禮足，却住一面。 白佛言： 「世尊，如世尊所說『得見法涅槃』，云何比丘得見法涅槃？」</td>
     <td id='p2'>2. There was then a certain monk who came to visit the Buddha. He bowed his head at the Buddha’s feet and withdrew to stand at one side. He then said to the Buddha, “Bhagavān, as the Bhagavān says ‘attain <em>nirvāṇa</em> in the present life,’ how does a monk attain <em>nirvāṇa</em> in the present life?”</td>
   </tr>
   <tr>
-    <td title='t99.2.6a3'>佛告比丘： 「善哉！善哉！汝今欲知見法涅槃耶？」</td>
+    <td title='t99.2.6a3'>佛告比丘： 「善哉，善哉！汝今欲知見法涅槃耶？」</td>
     <td id='p3'>3. The Buddha told the monk, “Good, good! Do you want now to know about <em>nirvāṇa</em> in the present life?”</td>
   </tr>
   <tr>
-    <td title='t99.2.6a4'>比丘白佛： 「唯然，世尊！」</td>
+    <td title='t99.2.6a4'>比丘白佛： 「唯然，世尊。」</td>
     <td>The monk said to the Buddha, “Indeed, Bhagavān.”</td>
   </tr>
   <tr>
@@ -34,11 +34,11 @@ next: SA1_35.html
     <td>The Buddha told the monk, “[Listen closely!] Listen closely, and consider it well. I will explain it for you.”</td>
   </tr>
   <tr>
-    <td title='t99.2.6a6'>佛告比丘： 「於色生厭、離欲、滅盡，不起諸漏，心正解脫。 是名比丘見法涅槃。 如是受、想、行、識，於識生厭、離欲、滅盡，不起諸漏，心正解脫。 是名比丘見法涅槃。」</td>
-    <td id='p4'>4. The Buddha told the monk, “Becoming disillusioned with form, becoming free of desire for it, and completely ceasing it, he doesn’t create the contaminants, and his mind is properly liberated. This is called a monk who attains <em>nirvāṇa</em> in the present life. Thus with feeling … conception … volition … awareness, becoming disillusioned with awareness, becoming free of desire for it, completely ceasing it, he doesn’t create the contaminants, and his mind is properly liberated. This is called a monk who attains <em>nirvāṇa</em> in the present life.”</td>
+    <td title='t99.2.6a6'>佛告比丘： 「於色生厭、離欲、滅盡，不起諸漏，心正解脫。 是名比丘見法涅槃。 如是受、想、行、識⋯於識生厭、離欲、滅盡，不起諸漏，心正解脫。 是名比丘見法涅槃。」</td>
+    <td id='p4'>4. The Buddha told the monk, “Becoming disillusioned with form, becoming free of desire for it, and completely ceasing it, one doesn’t create the contaminants, and their mind is properly liberated. This is called a monk who attains <em>nirvāṇa</em> in the present life. <em>It’s the same with feeling, conception, volition, awareness</em> … becoming disillusioned with awareness, becoming free of desire for it, completely ceasing it, one doesn’t create the contaminants, and their mind is properly liberated. This is called a monk who attains <em>nirvāṇa</em> in the present life.”</td>
   </tr>
   <tr>
-    <td title='t99.2.6a10'>時，彼比丘聞佛所說，踊躍歡喜，作禮而去。</td>
+    <td title='t99.2.6a10'>時，彼比丘聞佛所說，踊躍歡喜。 作禮而去。</td>
     <td id='p5'>5. When that monk heard what the Buddha taught, he celebrated and rejoiced. He then bowed and departed.</td>
   </tr>
 </table>
@@ -53,6 +53,6 @@ next: SA1_35.html
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 1 March 2024</p>
+<p class='revised'>Last Revised: 17 September 2024</p>
 
 <hr/>
