--- a/01_agama/samyukta/01/SA1_35.md
+++ b/01_agama/samyukta/01/SA1_35.md
@@ -18,23 +18,23 @@ next: SA1_36.html
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td title='t99.2.6a13'>爾時，有異比丘名三蜜離提，來詣佛所，頭面禮足，却住一面，白佛言： 「如世尊說「說法師」，云何名為說法師？」</td>
+    <td title='t99.2.6a13'>爾時，有異比丘名三蜜離提，來詣佛所。 頭面禮足，却住一面。 白佛言： 「如世尊說『說法師』，云何名為說法師？」</td>
     <td id='p2'>2. There was then a certain monk named Samṛddhi who came to visit the Buddha. He bowed his head at the Buddha’s feet and withdrew to stand to one side. He then said to the Buddha, “As the Bhagavān says ‘the teaching of a Dharma teacher,’ what’s called the teaching of a Dharma teacher?”</td>
   </tr>
   <tr>
     <td title='t99.2.6a15'>佛告比丘： 「汝今欲知說法師義耶？」</td>
-    <td id='p3'>3. The Buddha asked the monk, “[Good, good!] Do you want now to know the meaning of ‘the teaching of a Dharma teacher’?”</td>
+    <td id='p3'>3. The Buddha said to the monk, “[Good, good!] Do you want now to know the meaning of ‘the teaching of a Dharma teacher’?”</td>
   </tr>
   <tr>
     <td title='t99.2.6a16'>比丘白佛： 「唯然，世尊！」</td>
     <td>The monk said to the Buddha, “Indeed, Bhagavān.”</td>
   </tr>
   <tr>
-    <td title='t99.2.6a17'>佛告比丘： 「諦聽，善思，當為汝說。 若比丘於色說厭、離欲、滅盡，是名說法師。 如是於受、想、行、識，於識說厭、離欲、滅盡。 是名說法師。」</td>
-    <td id='p4'>4. The Buddha told the monk, “[Listen closely!] Listen closely, and consider it well. I will explain this for you. If a monk teaches disillusionment with form, being free of desire for it, and completely ceasing it, this is called the teaching of a Dharma teacher. Thus with feeling … conception … volition … awareness, he teaches disillusionment with awareness, being free of desire for it, and completely ceasing it. This is called the teaching of a Dharma teacher.”</td>
+    <td title='t99.2.6a17'>佛告比丘： 「諦聽，善思。 當為汝說。 若比丘於色說厭、離欲、滅盡，是名說法師。 如是於受、想、行、識，於識說厭、離欲、滅盡。 是名說法師。」</td>
+    <td id='p4'>4. The Buddha told the monk, “[Listen closely!] Listen closely, and consider it well. I will explain this for you. If a monk teaches disillusionment with form, being free of desire for it, and completely ceasing it, this is called the teaching of a Dharma teacher. <em>It’s the same with feeling, conception, volition, and awareness</em> … he teaches disillusionment with awareness, being free of desire for it, and completely ceasing it. This is called the teaching of a Dharma teacher.”</td>
   </tr>
   <tr>
-    <td title='t99.2.6a20'>時，彼比丘聞佛所說，踊躍歡喜，作禮而去。</td>
+    <td title='t99.2.6a20'>時，彼比丘聞佛所說，踊躍歡喜。 作禮而去。</td>
     <td id='p5'>5. When that monk heard what the Buddha taught, he celebrated and rejoiced. He then bowed and departed.</td>
   </tr>
 <tr>
@@ -43,10 +43,10 @@ next: SA1_36.html
 </tr>
 <tr>
   <td title='t99.2.6a22'><ul class='verse'>
-    <li>多聞、善說法<br/>
-    向法及涅槃<br/>
-    三蜜離提問<br/>
-    云何說法師</li>
+    <li>多聞、善說法、<br/>
+    向法、及涅槃、<br/>
+    三蜜離提問、<br/>
+    『云何說法師』。</li>
   </ul></td>
   <td><ul class='verse'>
     <li>[31] Well versed, [32] the well taught Dharma,<br/>
@@ -67,6 +67,6 @@ next: SA1_36.html
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 1 March 2024</p>
+<p class='revised'>Last Revised: 17 September 2024</p>
 
 <hr/>
